# MCP_servers

./: pyproject.toml  requirements.txt
client/: agent.py  llm.py
frontend/: app.py
server/: mcp_server.py
server/tools/: arxiv_tool.py  math_tool.py  wiki_tool.py
