[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "fastmcp>=2.14.3",
    "ipykernel>=7.1.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-tavily>=0.2.16",
    "mcp>=1.25.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
